# SmartPyDumper

./: .gitignore  01_low_requirements_test.sh  02_pip_install_and_test.sh  03_pip_build.sh  04_pip_publish.sh  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
SmartPyDumper/object_inspect/: compare.py  type_helper.py
SmartPyDumper/object_inspect/tests/: test_compare.py
SmartPyDumper/serializer/: pydump_reader.py  pydump_reader_pessimistic.py  smart_serializer.py  smart_serializer_pessimistic.py
SmartPyDumper/serializer/tests/: test_pydump_reader.py  test_smart_serializer.py
examples/: example01.py
